# FreeRDS

./: .gitignore  CMakeLists.txt  FreeRDSConfig.cmake  FreeRDSConfig.cmake.in  FreeRDSConfigVersion.cmake  build-freerds.sh  config.h.in  freerds-backend.pc.in  freerds-module-connector.pc.in
channels/: .gitignore  CMakeLists.txt  channel_plugin.h  channel_server.c  channel_utils.c  channel_utils.h
channels/cliprdr/: CMakeLists.txt  cliprdr_plugin.c
channels/rdpdr/: CMakeLists.txt  rdpdr_fuse.c  rdpdr_fuse.h  rdpdr_plugin.c  rdpdr_plugin.h
channels/rdpsnd/: CMakeLists.txt  rdpsnd_plugin.c  rdpsnd_plugin_api.c  rdpsnd_plugin_api.h  rdpsnd_plugin_msgs.h
common/: CMakeLists.txt  arch.h  defines.h  file.c  file.h  file_loc.h  list.c  list.h  log.c  log.h  os_calls.c  os_calls.h  parse.h  ssl_calls.c  ssl_calls.h  thread_calls.c  thread_calls.h  trans.c  trans.h  xrdp_client_info.h  xrdp_constants.h  xrdp_rail.h
core/: CMakeLists.txt  bitmap.c  bitmap.h  core.c  core.h
freerds/core/: .gitignore  CMakeLists.txt  app_context.c  app_context.h  auth.c  backend.c  channels.c  channels.h  client.c  client_module.c  core.c  core.h  encoder.c  encoder.h  freerds.c  freerds.h  listener.c  pipeline.c  process.c  rpc.c  rpc.h  server.c  server_module.c
freerds/icp/: .gitignore  CMakeLists.txt  client.c  icp.c  icp_client_stubs.c  icp_server_stubs.c  icp_server_stubs.h  pbrpc.c  pbrpc.h  server.c
freerds/module-connector/: CMakeLists.txt  freerds-module-connector.pc.in  module_connector.c  outbound.c  protocol.c  protocol.h  service_helper.c  transport.c
freerds/rpc/: CMakeLists.txt  m2s.c  msg.c  pack.c  rpc.c  rpc.h  s2m.c
instfiles/: .gitignore  CMakeLists.txt  xrdp-ng-sesman.service.in  xrdp-ng.service.in  xrdp.sh.in
instfiles/default/: CMakeLists.txt
instfiles/init.d/: xrdp
libxrdp/: CMakeLists.txt  libxrdp.c  libxrdp.h  libxrdpinc.h  xrdp_channel.c  xrdp_fastpath.c  xrdp_iso.c  xrdp_mcs.c  xrdp_orders.c  xrdp_orders_rail.c  xrdp_orders_rail.h  xrdp_rdp.c  xrdp_sec.c  xrdp_surface.c  xrdp_tcp.c
libxrdp/protocol/: CMakeLists.txt  inbound.c  inbound.h  interface.c  outbound.c  outbound.h  protocol.c  service.c  service.h  transport.c  transport.h
manager/: .gitignore  CMakeLists.txt  main.cpp
manager/appcontext/: ApplicationContext.cpp  ApplicationContext.h
manager/call/: Call.cpp  Call.h  CallFactory.cpp  CallFactory.h  CallIn.cpp  CallIn.h  CallInAuthenticateUser.cpp  CallInAuthenticateUser.h  CallInDisconnectUserSession.cpp  CallInDisconnectUserSession.h  CallInEndSession.cpp  CallInEndSession.h  CallInIsVCAllowed.cpp  CallInIsVCAllowed.h  CallInLogOffUserSession.cpp  CallInLogOffUserSession.h  CallInLogonUser.cpp  CallInLogonUser.h  CallInPing.cpp  CallInPing.h  CallOut.cpp  CallOut.h  CallOutFdsApiVirtualChannelOpen.cpp  CallOutFdsApiVirtualChannelOpen.h  CallOutLogOffUserSession.cpp  CallOutLogOffUserSession.h  CallOutPing.cpp  CallOutPing.h  CallOutSwitchTo.cpp  CallOutSwitchTo.h  CallOutVirtualChannelOpen.cpp  CallOutVirtualChannelOpen.h  RpcEngine.cpp  RpcEngine.h  TaskEndSession.cpp  TaskEndSession.h  TaskSwitchTo.cpp  TaskSwitchTo.h
manager/config/: PropertyCWrapper.cpp  PropertyManager.cpp  PropertyManager.h
manager/fdsapi/: FDSApiHandler.cpp  FDSApiHandler.h  FDSApiMessages.cpp  FDSApiMessages.h  FDSApiServer.cpp  FDSApiServer.h
manager/module/: AuthModule.cpp  AuthModule.h  CallBacks.cpp  CallBacks.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  TaskModuleShutdown.cpp  TaskModuleShutdown.h
manager/pbRPC/: RpcEngine.cpp  RpcEngine.h
manager/session/: ApplicationContext.cpp  ApplicationContext.h  Connection.cpp  Connection.h  ConnectionStore.cpp  ConnectionStore.h  PropertyCWrapper.cpp  PropertyManager.cpp  PropertyManager.h  Session.cpp  Session.h  SessionStore.cpp  SessionStore.h  TaskSessionTimeout.cpp  TaskSessionTimeout.h
manager/task/: Executor.cpp  Executor.h  Task.h
manager/utils/: CSGuard.h  SignalingQueue.h  StringHelpers.cpp  StringHelpers.h
module/X11/: CMakeLists.txt  x11_module.c  x11_module.h
sesman/: .gitignore  CMakeLists.txt  access.c  access.h  auth.h  cfg.h  config.c  env.c  env.h  lock.c  lock.h  scp.c  scp.h  scp_v0.c  scp_v0.h  scp_v1.c  scp_v1.h  scp_v1_mng.c  scp_v1_mng.h  sesman.c  sesman.h  sesman.ini  session.c  session.h  sig.c  sig.h  startwm.sh  thread.c  thread.h  verify_user.c  verify_user_kerberos.c  verify_user_pam.c  verify_user_pam_userpass.c
sesman/chansrv/: CMakeLists.txt  chansrv.c  chansrv_fuse.c  clipboard.c  clipboard_file.c  devredir.c  drdynvc.c  rail.c  sound.c  xcommon.c
sesman/libscp/: CMakeLists.txt  libscp.c  libscp.h  libscp_commands.h  libscp_connection.c  libscp_connection.h  libscp_init.c  libscp_init.h  libscp_lock.c  libscp_lock.h  libscp_session.c  libscp_session.h  libscp_tcp.c  libscp_tcp.h  libscp_types.h  libscp_types_mng.h  libscp_v0.c  libscp_v0.h  libscp_v1c.c  libscp_v1c.h  libscp_v1c_mng.c  libscp_v1c_mng.h  libscp_v1s.c  libscp_v1s.h  libscp_v1s_mng.c  libscp_v1s_mng.h  libscp_vX.c  libscp_vX.h
sesman/sessvc/: CMakeLists.txt  sessvc.c
sesman/tools/: CMakeLists.txt  tcp.c
session-manager/: .gitignore  CMakeLists.txt  config.h.in  main.cc  main.cpp
session-manager/call/: CallFactory.cpp  CallIn.cpp  CallInEndSession.h  CallInLogOffUserSession.cpp  CallOut.cpp  CallOut.h  CallOutPing.h  CallOutSwitchTo.cpp  TaskEndSession.cpp
session-manager/config/: PropertyCWrapper.h
session-manager/fdsapi/: CMakeLists.txt  FDSApiHandler.h  FDSApiServer.cpp  fdsapi.cpp  fdsapi_thrift.cpp  fdsapi_thrift.h
widgets/: CMakeLists.txt
xorg/rdp/: .gitignore  (+36 more)
xrdp/: .gitignore  CMakeLists.txt  Makefile.am  freerds  funcs.c  lang.c  xrdp.c  xrdp.h  xrdp.ini  xrdp_auth.c  xrdp_bitmap.c  xrdp_cache.c  xrdp_channels.c  xrdp_channels.h  xrdp_client_module.c  xrdp_core.c  xrdp_core.h  xrdp_font.c  xrdp_listen.c  xrdp_listener.c  xrdp_login_wnd.c  xrdp_mm.c  xrdp_module.c  xrdp_painter.c  xrdp_pipeline.c  xrdp_process.c  xrdp_region.c  xrdp_server_module.c  xrdp_types.h  xrdp_wm.c  xrdp_xup.c  xrdp_xup.h  xrdpwin.c
xup/: CMakeLists.txt  Makefile.am  xup.c  xup.h
(+421 files in other folders)
